상품, 주문 통합테스트